--- a/geospatial_etl.ipynb
+++ b/geospatial_etl.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYb8h/PqKSfwW11SGOQZBX",
+      "authorship_tag": "ABX9TyONuN/KSryPwpXfNCqiPuJe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -481,7 +481,7 @@
         "WHERE ST_WITHIN(points.centroide, city.geometry)\n",
         "'''\n",
         "\n",
-        "df= bd.read_sql(query, billing_project_id='basedosdados-dev')"
+        "df= bd.read_sql(query, billing_project_id='billing-id')"
       ],
       "metadata": {
         "colab": {
@@ -887,12 +887,12 @@
         "#Nothings change, but the data has the atribbute to transform in geospatial dataframe."
       ],
       "metadata": {
-        "id": "tI1rx18qzhWZ",
-        "outputId": "60a6e234-7aac-47fa-92a0-87886fd9e690",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "tI1rx18qzhWZ",
+        "outputId": "60a6e234-7aac-47fa-92a0-87886fd9e690"
       },
       "execution_count": 8,
       "outputs": [
@@ -1339,14 +1339,14 @@
         "SELECT * FROM `basedosdados.br_geobr_mapas.municipio`\n",
         "WHERE id_municipio = '3550308'\n",
         "'''\n",
-        "sp = bd.read_sql(query, billing_project_id='basedosdados-dev')"
+        "sp = bd.read_sql(query, billing_project_id='billing-id')"
       ],
       "metadata": {
-        "id": "iKxWTer70pT4",
-        "outputId": "e4863ccf-f553-4717-e7da-4283e278eec8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iKxWTer70pT4",
+        "outputId": "e4863ccf-f553-4717-e7da-4283e278eec8"
       },
       "execution_count": 15,
       "outputs": [
@@ -1369,11 +1369,11 @@
       ],
       "metadata": {
         "id": "frQY8wh4V5OX",
-        "outputId": "4da9a05a-6e76-4d12-d7de-aaa48289dad5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        }
+        },
+        "outputId": "4da9a05a-6e76-4d12-d7de-aaa48289dad5"
       },
       "execution_count": 16,
       "outputs": [
@@ -1521,12 +1521,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "lpmSvu2M1V3Q",
-        "outputId": "829f47a3-02a9-486c-edd4-534fd93f02fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 872
-        }
+        },
+        "id": "lpmSvu2M1V3Q",
+        "outputId": "829f47a3-02a9-486c-edd4-534fd93f02fd"
       },
       "execution_count": 18,
       "outputs": [
@@ -1541,6 +1541,27 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#stop here\n",
+        "#20230905"
+      ],
+      "metadata": {
+        "id": "Vc26wy_05Cro"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BTz9rvg95Eng"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
