--- a/pharmacies.ipynb
+++ b/pharmacies.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5x6LIs5KTAKtxgF5swQF2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gustavoalcantara/data-porfolio/blob/main/pharmacies.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gustavoalcantara/data-portfolio/blob/main/pharmacies.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -38,7 +37,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Using Bigquery, it is possible to perform spatial analysis. Therefore, the present code demonstrates the creation of a pharmacy attractiveness index by census tract for the whole of Brazil. The data used were CNPJ, CEP and IBGE census tracts."
+        "Using Bigquery, it is possible to perform spatial analysis. Therefore, the present code demonstrates the creation of a pharmacy attractiveness index by census tract for the whole of Brazil. The data used were CNPJ, CEP and IBGE census tracts. You can check this analysis at this [link](https://www.youtube.com/watch?v=WQruVEizTlc&t=1s)."
       ],
       "metadata": {
         "id": "RVp6XiCpyZTo"
@@ -53,12 +52,12 @@
       "metadata": {
         "id": "ziY36trfx4oG"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "xiCxk5qcwnf5"
       },
@@ -148,7 +147,7 @@
         "id": "1ZOAgS6qx-Yk",
         "outputId": "8fd06ea1-4498-428b-aae3-0e81e7628e32"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +171,7 @@
         "id": "zMAG8sy91A9c",
         "outputId": "81abcefd-b610-4b2c-d91c-d31b72debf54"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
